Support filtering by access policy
Special cases:
empty (default) = public without access policies
* = any
